--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,12 +7,20 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        <h:commandButton value="Lokator" action="Login.xhtml"/>
-        <h:commandButton value="Właściciel" />
-        <h:commandButton value="Admin" />
-        <br />
-        <h:link outcome="/budynek/List" value="Show All Budynek Items"/>
+        <h:form>
+            <h:commandButton value="Lokator" action="Login.xhtml"/>
+            <h:commandButton value="Właściciel" />
+            <h:commandButton value="Admin" />
+            
+        </h:form>
     </h:body>
+
+
+
+
+
+
+
 
 
 
