--- a/web/lokator/List.xhtml
+++ b/web/lokator/List.xhtml
@@ -63,6 +63,18 @@
                             </f:facet>
                             <h:outputText value="#{item.mieszkanieId}"/>
                         </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListLokatorTitle_imie}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.imie}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListLokatorTitle_nazwisko}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.nazwisko}"/>
+                        </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{lokatorController.prepareCreate}" update=":LokatorCreateForm" oncomplete="PF('LokatorCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":LokatorViewForm" oncomplete="PF('LokatorViewDialog').show()" disabled="#{empty lokatorController.selected}"/>
