--- a/web/wlasciciel/View.xhtml
+++ b/web/wlasciciel/View.xhtml
@@ -22,6 +22,10 @@
                         <h:outputText value="#{wlascicielController.selected.kontakt}" title="#{bundle.ViewWlascicielTitle_kontakt}"/>
                         <h:outputText value="#{bundle.ViewWlascicielLabel_budynekId}"/>
                         <h:outputText value="#{wlascicielController.selected.budynekId}" title="#{bundle.ViewWlascicielTitle_budynekId}"/>
+                        <h:outputText value="#{bundle.ViewWlascicielLabel_imie}"/>
+                        <h:outputText value="#{wlascicielController.selected.imie}" title="#{bundle.ViewWlascicielTitle_imie}"/>
+                        <h:outputText value="#{bundle.ViewWlascicielLabel_nazwisko}"/>
+                        <h:outputText value="#{wlascicielController.selected.nazwisko}" title="#{bundle.ViewWlascicielTitle_nazwisko}"/>
                     </p:panelGrid>
                     <p:commandButton value="#{bundle.Close}" onclick="WlascicielViewDialog.hide()"/>
                 </h:panelGroup>
