--- a/web/budynek/Create.xhtml
+++ b/web/budynek/Create.xhtml
@@ -8,19 +8,19 @@
 
     <ui:composition>
 
-        <p:dialog id="BudynekCreateDlg" widgetVar="BudynekCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundleBudynek.CreateBudynekTitle}">
+        <p:dialog id="BudynekCreateDlg" widgetVar="BudynekCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateBudynekTitle}">
             <h:form id="BudynekCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{budynekController.selected != null}">
-                        <p:outputLabel value="#{bundleBudynek.CreateBudynekLabel_id}" for="id" />
-                        <p:inputText id="id" value="#{budynekController.selected.id}" title="#{bundleBudynek.CreateBudynekTitle_id}" required="true" requiredMessage="#{bundleBudynek.CreateBudynekRequiredMessage_id}"/>
-                        <p:outputLabel value="#{bundleBudynek.CreateBudynekLabel_adres}" for="adres" />
-                        <p:inputText id="adres" value="#{budynekController.selected.adres}" title="#{bundleBudynek.CreateBudynekTitle_adres}" required="true" requiredMessage="#{bundleBudynek.CreateBudynekRequiredMessage_adres}"/>
-                        <p:outputLabel value="#{bundleBudynek.CreateBudynekLabel_iloscMieszkan}" for="iloscMieszkan" />
-                        <p:inputText id="iloscMieszkan" value="#{budynekController.selected.iloscMieszkan}" title="#{bundleBudynek.CreateBudynekTitle_iloscMieszkan}" required="true" requiredMessage="#{bundleBudynek.CreateBudynekRequiredMessage_iloscMieszkan}"/>
+                        <p:outputLabel value="#{bundle.CreateBudynekLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{budynekController.selected.id}" title="#{bundle.CreateBudynekTitle_id}" required="true" requiredMessage="#{bundle.CreateBudynekRequiredMessage_id}"/>
+                        <p:outputLabel value="#{bundle.CreateBudynekLabel_adres}" for="adres" />
+                        <p:inputText id="adres" value="#{budynekController.selected.adres}" title="#{bundle.CreateBudynekTitle_adres}" required="true" requiredMessage="#{bundle.CreateBudynekRequiredMessage_adres}"/>
+                        <p:outputLabel value="#{bundle.CreateBudynekLabel_iloscMieszkan}" for="iloscMieszkan" />
+                        <p:inputText id="iloscMieszkan" value="#{budynekController.selected.iloscMieszkan}" title="#{bundle.CreateBudynekTitle_iloscMieszkan}" required="true" requiredMessage="#{bundle.CreateBudynekRequiredMessage_iloscMieszkan}"/>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{budynekController.create}" value="#{bundleBudynek.Save}" update="display,:BudynekListForm:datalist,:growl" oncomplete="handleSubmit(args,'BudynekCreateDialog');"/>
-                    <p:commandButton value="#{bundleBudynek.Cancel}" onclick="BudynekCreateDialog.hide()"/>
+                    <p:commandButton actionListener="#{budynekController.create}" value="#{bundle.Save}" update="display,:BudynekListForm:datalist,:growl" oncomplete="handleSubmit(args,'BudynekCreateDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="BudynekCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
