--- a/web/budynek/List.xhtml
+++ b/web/budynek/List.xhtml
@@ -10,12 +10,12 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundleBudynek.ListBudynekTitle}"></h:outputText>
+            <h:outputText value="#{bundle.ListBudynekTitle}"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="BudynekListForm">
-                <p:panel header="#{bundleBudynek.ListBudynekTitle}">
+                <p:panel header="#{bundle.ListBudynekTitle}">
                     <p:dataTable id="datalist" value="#{budynekController.items}" var="item"
                                  selectionMode="single" selection="#{budynekController.selected}"
                                  paginator="true"
@@ -29,27 +29,27 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundleBudynek.ListBudynekTitle_id}"/>
+                                <h:outputText value="#{bundle.ListBudynekTitle_id}"/>
                             </f:facet>
                             <h:outputText value="#{item.id}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundleBudynek.ListBudynekTitle_adres}"/>
+                                <h:outputText value="#{bundle.ListBudynekTitle_adres}"/>
                             </f:facet>
                             <h:outputText value="#{item.adres}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundleBudynek.ListBudynekTitle_iloscMieszkan}"/>
+                                <h:outputText value="#{bundle.ListBudynekTitle_iloscMieszkan}"/>
                             </f:facet>
                             <h:outputText value="#{item.iloscMieszkan}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundleBudynek.Create}" actionListener="#{budynekController.prepareCreate}" update=":BudynekCreateForm" oncomplete="PF('BudynekCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundleBudynek.View}" update=":BudynekViewForm" oncomplete="PF('BudynekViewDialog').show()" disabled="#{empty budynekController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundleBudynek.Edit}" update=":BudynekEditForm" oncomplete="PF('BudynekEditDialog').show()" disabled="#{empty budynekController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundleBudynek.Delete}" actionListener="#{budynekController.destroy}" update=":growl,datalist" disabled="#{empty budynekController.selected}"/>
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{budynekController.prepareCreate}" update=":BudynekCreateForm" oncomplete="PF('BudynekCreateDialog').show()"/>
+                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":BudynekViewForm" oncomplete="PF('BudynekViewDialog').show()" disabled="#{empty budynekController.selected}"/>
+                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":BudynekEditForm" oncomplete="PF('BudynekEditDialog').show()" disabled="#{empty budynekController.selected}"/>
+                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{budynekController.destroy}" update=":growl,datalist" disabled="#{empty budynekController.selected}"/>
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
