--- a/web/lokator/View.xhtml
+++ b/web/lokator/View.xhtml
@@ -24,6 +24,10 @@
                         <p:selectBooleanCheckbox value="#{lokatorController.selected.aktywne}" disabled="true"/>
                         <h:outputText value="#{bundle.ViewLokatorLabel_mieszkanieId}"/>
                         <h:outputText value="#{lokatorController.selected.mieszkanieId}" title="#{bundle.ViewLokatorTitle_mieszkanieId}"/>
+                        <h:outputText value="#{bundle.ViewLokatorLabel_imie}"/>
+                        <h:outputText value="#{lokatorController.selected.imie}" title="#{bundle.ViewLokatorTitle_imie}"/>
+                        <h:outputText value="#{bundle.ViewLokatorLabel_nazwisko}"/>
+                        <h:outputText value="#{lokatorController.selected.nazwisko}" title="#{bundle.ViewLokatorTitle_nazwisko}"/>
                     </p:panelGrid>
                     <p:commandButton value="#{bundle.Close}" onclick="LokatorViewDialog.hide()"/>
                 </h:panelGroup>
