--- a/web/awaria/Create.xhtml
+++ b/web/awaria/Create.xhtml
@@ -20,17 +20,13 @@
                         <p:inputText id="opis" value="#{awariaController.selected.opis}" title="#{bundle.CreateAwariaTitle_opis}" required="true" requiredMessage="#{bundle.CreateAwariaRequiredMessage_opis}"/>
                         <p:outputLabel value="#{bundle.CreateAwariaLabel_rozwiazane}" for="rozwiazane" />
                         <p:selectBooleanCheckbox id="rozwiazane" value="#{awariaController.selected.rozwiazane}" required="true" requiredMessage="#{bundle.EditAwariaRequiredMessage_rozwiazane}"/>
+                        <p:outputLabel value="#{bundle.CreateAwariaLabel_lokatorId}" for="lokatorId" />
+                        <p:inputText id="lokatorId" value="#{awariaController.selected.lokatorId}" title="#{bundle.CreateAwariaTitle_lokatorId}" required="true" requiredMessage="#{bundle.CreateAwariaRequiredMessage_lokatorId}"/>
                         <p:outputLabel value="#{bundle.CreateAwariaLabel_budynekId}" for="budynekId" />
                         <p:selectOneMenu id="budynekId" value="#{awariaController.selected.budynekId}" required="true" requiredMessage="#{bundle.EditAwariaRequiredMessage_budynekId}">
                             <f:selectItems value="#{budynekController.itemsAvailableSelectOne}"
                                            var="budynekIdItem"
                                            itemValue="#{budynekIdItem}"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="#{bundle.CreateAwariaLabel_lokatorId}" for="lokatorId" />
-                        <p:selectOneMenu id="lokatorId" value="#{awariaController.selected.lokatorId}" required="true" requiredMessage="#{bundle.EditAwariaRequiredMessage_lokatorId}">
-                            <f:selectItems value="#{lokatorController.itemsAvailableSelectOne}"
-                                           var="lokatorIdItem"
-                                           itemValue="#{lokatorIdItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:commandButton actionListener="#{awariaController.create}" value="#{bundle.Save}" update="display,:AwariaListForm:datalist,:growl" oncomplete="handleSubmit(args,'AwariaCreateDialog');"/>
