--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -10,10 +10,12 @@
         <h:form>
             <h:commandButton value="Lokator" action="Login.xhtml"/>
             <h:commandButton value="Właściciel" />
-            <h:commandButton value="Admin" />
-            
+            <h:commandButton value="Admin" action="Login_2.xhtml"/>
+
         </h:form>
+       
     </h:body>
+
 
 
 
